--- a/frontend/add_medicine.html
+++ b/frontend/add_medicine.html
@@ -11,9 +11,12 @@
         <input type="text" id="dosage" placeholder="Dosage">
         <select id="time">
             <option value="">Select Time</option>
-            <option>Morning</option>
-            <option>Afternoon</option>
-            <option>Night</option>
+            <option>Morning(Before Meal)</option>
+            <option>Morning(After Meal)</option>
+            <option>Afternoon(Before Meal)</option>
+            <option>Afternoon(After Meal)</option>
+            <option>Night(Before Meal)</option>
+            <option>Night(After Meal)</option>
         </select>
         <button onclick="addMedicine()">Add</button>
         <p id="msg"></p>
